fix overflow issue for small width devices :lipstick:

--- a/src/layouts/post/postLayout.css
+++ b/src/layouts/post/postLayout.css
@@ -4,8 +4,6 @@ img {
     margin-right: auto;
     max-width: 640px;
     max-height: 426px;
-    width: 640px;
-    height: 426px;
 }
 
 * {
